# ThinShellLab

./: .gitignore  .gitmodules  Readme.md  pyproject.toml
code/agent/: networks.py  traj_opt.py  traj_opt_single.py
code/engine/: BaseScene.py  analytic_grad_single.py  analytic_grad_system.py  blob.py  build_luisa_script.py  contact_diff.py  convert_luisa.py  convert_piece.py  geometry.py  geometry_self.py  gripper_single.py  gripper_tactile.py  linalg.py  model_elastic_offset.py  model_elastic_tactile.py  model_fold_offset.py  readfile.py  render_engine.py  sparse_solver.py
code/optimizer/: optim.py
code/scripts/: run_PPO_book.sh  run_PPO_flatlift.sh  run_PPO_fold_7.sh  run_PPO_fold_8.sh  run_PPO_interact.sh  run_PPO_interact_1.sh  run_PPO_lift.sh  run_PPO_push.sh  run_RL_balance.sh  run_RL_flatlift.sh  run_RL_folding.sh  run_RL_following.sh  run_RL_forming.sh  run_RL_lifting.sh  run_RL_pick_fold.sh  run_cmaes_balance.sh  run_cmaes_bounce.sh  run_cmaes_bouncing.sh  run_cmaes_card.sh  run_cmaes_flatlift.sh  run_cmaes_folding.sh  run_cmaes_following.sh  run_cmaes_forming.sh  run_cmaes_interact.sh  run_cmaes_interact_1.sh  run_cmaes_interact_soft.sh  run_cmaes_lift.sh  run_cmaes_lifting.sh  run_cmaes_pick_fold.sh  run_cmaes_push.sh  run_cmaes_separate_soft.sh  run_cmaes_separating.sh  run_cmaes_slide.sh  run_cmaes_table.sh  run_cmaes_throwing.sh  run_dp_bouncing.sh  run_dp_card.sh  run_dp_slide.sh  run_trajopt_balancing.sh  (+7 more)
data/: ball.ele  ball.face  ball.node  ball_surface_mesh.ply  scene_texture_options.json  tactile.ele  tactile.face  tactile.node
(+38 files in other folders)
